test/errors/python_generator_error/zs/module_names/instantiation_with_structure_clash_error.zs
package module_names.instantiation_with_structure_clash_error;

struct SomeName
{
    Some<Name> field;
};

struct Some<T>
{
    T field;
};

struct Name
{
    string name;
};
